<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="show_password">Afficher le mot de passe</string>
    <string name="activity_not_found">Aucune activité à gérer: %s</string>
    <string name="add_another">Ajouter un groupe</string>
    <string name="add_another_repeat">Ajouter un autre groupe \"%s\" ?</string>
    <string name="add_repeat">Ajouter un nouveau groupe \"%s\" ?</string>
    <string name="add_repeat_no">Ne pas ajouter</string>
    <string name="audio_file_error">Aucun fichier audio spécifié.</string>
    <string name="audio_file_invalid">%s n\'est pas un fichier audio valide.</string>
    <string name="cancel">Annuler</string>
    <string name="cancel_loading_form">Annuler</string>
    <string name="cancel_location">Annuler</string>
    <string name="cannot_edit_completed_form">Ce formulaire ne peut pas être édité une fois finalisé. Il est peut-être encrypté.</string>
    <string name="capture_audio">Enregistrer de l\'audio</string>
    <string name="capture_image">Prendre une photo</string>
    <string name="capture_osm">Lancer OpenMapKit</string>
    <string name="recapture_osm">Refaire le balisage d\'OSM</string>
    <string name="capture_video">Enregistrer une vidéo</string>
    <string name="change_language">Changer la langue</string>
    <string name="change_password">Mot de passe ODK</string>
    <string name="change_username">Nom d\'utilisateur ODK</string>
    <string name="clearanswer_confirm">Enlever la réponse à \"%s\" ?</string>
    <string name="clear_answer">Enlever la réponse</string>
    <string name="clear_answer_ask">Enlever cette réponse ?</string>
    <string name="clear_answer_no">Annuler</string>
    <string name="data">Formulaires sauvegardés</string>
    <string name="data_saved_error">Désolé, la sauvegarde du formulaire a échouée.</string>
    <string name="data_saved_ok">Le formulaire a été enregistré avec succès.</string>
    <string name="save_point_error">Erreur lors de l\'enregistrement du point de récupération: %s</string>
    <string name="default_completed">Finaliser par défaut</string>
    <string name="default_completed_summary">Marquer comme finalisé par défaut</string>
    <string name="delete_confirm">Supprimer %s formulaire(s)?</string>
    <string name="delete_file">Supprimer la sélection</string>
    <string name="delete_no">Ne pas supprimer</string>
    <string name="delete_repeat">Supprimer le groupe</string>
    <string name="delete_repeat_ask">Supprimer ce groupe ?</string>
    <string name="delete_repeat_confirm">Supprimer le groupe \"%s\" et tous ses sous-groupes ?</string>
    <string name="delete_repeat_no">Annuler</string>
    <string name="delete_yes">Supprimer ces formulaires</string>
    <string name="discard_answer">Enlever la réponse</string>
    <string name="discard_group">Enlever le groupe</string>
    <string name="download">Télécharger la sélection</string>
    <string name="download_forms_result">Résultat du téléchargement</string>
    <string name="downloading_data">Connexion au serveur…</string>
    <string name="do_not_change">Annuler</string>
    <string name="do_not_exit">Annuler</string>
    <string name="do_not_save">Ignorer les changements</string>
    <string name="entering_repeat">Ajouter un groupe</string>
    <string name="entering_repeat_ask">Ajouter un nouveau groupe ?</string>
    <string name="enter_data">Remplir un formulaire</string>
    <string name="enter_data_button">Remplir un formulaire</string>
    <string name="error_occured">Une erreur s\'est produite</string>
    <string name="error_attaching_binary_file">Erreur pendant l\'attachement du média: %s</string>
    <string name="fetching_file">Récupération de %1$s.\n\nFormulaire %2$s de %3$s formulaire(s).</string>
    <string name="file_deleted_error">Désolé, %1$s de %2$s formulaires sélectionnés ont échoué la suppression.</string>
    <string name="file_deleted_ok">%s formulaire(s) supprimé(s) avec succès.</string>
    <string name="file_delete_in_progress">Désolé, une action de suppression d\'un formulaire est en cours.</string>
    <string name="file_invalid">Le fichier %s n\'est pas valide.</string>
    <string name="file_missing">Fichier %s manquant</string>
    <string name="finished_disk_scan">Le scan est fini. Tous les formulaires sont chargés.</string>
    <string name="forms">Formulaires vierges</string>
    <string name="getting_location">Chargement de la localisation</string>
    <string name="get_barcode">Obtention du code-barre</string>
    <string name="get_forms">Télécharger un formulaire vierge</string>
    <string name="get_location">Enregistrement du lieu</string>
    <string name="provider_disabled_error">Désolé, le fournisseur de localisation est désactivé.</string>
    <string name="invalid_answer_error">Désolé, la réponse n\'est pas valide.</string>
    <string name="jump_to_beginning">Aller au début</string>
    <string name="jump_to_end">Aller à la fin</string>
    <string name="jump_to_previous">Monter</string>
    <string name="leave_repeat_yes">Ne pas ajouter</string>
    <string name="leaving_repeat_ask"> Ajouter un nouveau groupe ?</string>
    <string name="list_failed_with_error">La liste a echouée. %s.</string>
    <string name="loading_form">Chargement du formulaire…</string>
    <string name="load_remote_form_error">Erreur de récupération de la liste</string>
    <string name="location_provider_accuracy">Utilisation de %1$s. La précision est de %2$s m.</string>
    <string name="location_accuracy">La précision est de %1$s mètres.</string>
    <string name="main_menu">Menu principal</string>
    <string name="main_menu_details">La collecte de données rendue plus facile…</string>
    <string name="manage_files">Supprimer formulaire sauvegardé</string>
    <string name="mark_finished">Marquer le formulaire comme finalisé</string>
    <string name="noselect_error">Désolé, vous n\'avez pas sélectionné un formulaire.</string>
    <string name="no_connection">Pas de connexion réseau disponible</string>
    <string name="no_items_display">Rien à afficher.</string>
    <string name="no_items_display_forms">Il n\'y a rien à afficher.\n\nEssayez d\'obtenir et de remplir un formulaire vierge.</string>
    <string name="no_items_display_sent_forms">Il n\'y a rien à afficher.\n\nEssayez d\'envoyer un formulaire finalisé.</string>
    <string name="no_items_display_instances">Il n\'y a rien à afficher.\n\nFinalisez vos formulaires enregistrés avant de les envoyer.</string>
    <string name="ok">OK</string>
    <string name="parse_error">Désolé. Impossible d\'analyser le formulaire.</string>
    <string name="parse_legacy_formlist_failed">Le serveur n\'a pas répondu avec un document de formulaires compatible avec Aggregate 0.9.x. : %s</string>
    <string name="parse_openrosa_formlist_failed">Le serveur n\'a pas répondu avec un document de formulaires compatible avec OpenRosa 1.0 : %s</string>
    <string name="password">Mot de passe</string>
    <string name="play_audio">Jouer le son</string>
    <string name="play_video">Jouer la vidéo</string>
    <string name="please_wait">Veuillez patienter.</string>
    <string name="please_wait_long">Veuillez patienter. Cette action peut prendre quelques minutes.</string>
    <string name="quit_application">Sortir %s</string>
    <string name="quit_entry">Sauvegarder et sortir</string>
    <string name="refresh">Rafraîchir</string>
    <string name="replace_barcode">Remplacer le code-barre</string>
    <string name="required_answer_error">Réponse obligatoire !</string>
    <string name="review_data">Éditer un formulaire sauvegardé</string>
    <string name="review_data_button">Éditer un formulaire sauvegardé (%s)</string>
    <string name="save_all_answers">Sauvegarder le formulaire</string>
    <string name="save_enter_data_description">Vous êtes à la fin de \"%s\".</string>
    <string name="saving_form">Sauvegarde du Formulaire…</string>
    <string name="sending_items">Envoi de %1$s sur %2$s formulaire(s)</string>
    <string name="send_data">Envoyer un formulaire finalisé</string>
    <string name="send_data_button">Envoyer un formulaire finalisé (%s)</string>
    <string name="send_selected_data">Envoyer éléments sélectionnés</string>
    <string name="view_sent_forms">Voir un formulaire envoyé</string>
    <string name="view_sent_forms_button">Voir formulaire envoyé (%s)</string>
    <string name="server_auth_credentials">Le nom d\'utilisateur et/ou le mot de passe est incorrect pour le serveur: %s</string>
    <string name="server_requires_auth">Le Serveur requiert une authentification</string>
    <string name="server_url">URL</string>
    <string name="server_preferences">Serveur</string>
    <string name="trigger">OK. Continuer.</string>
    <string name="uploading_data">Envoi du formulaire…</string>
    <string name="url_error">URL non valable !</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="view_hierarchy">Aller à la ligne de saisie</string>
    <string name="general_preferences">Modifier les Paramètres</string>
    <string name="client">Interface utilisateur</string>
    <string name="show_splash_summary">Montrer lors du démarrage</string>
    <string name="splash_path">Image sélectionnée</string>
    <string name="default_splash_path">Défaut d\'ODK</string>
    <string name="select_another_image">Sélectionner une autre Image</string>
    <string name="use_odk_default">Utiliser l\'Image par Défaut</string>
    <string name="change_splash_path">Modifier l\'image</string>
    <string name="keep_changes">Sauvegarder les Modifications</string>
    <string name="change_formlist_url">Chemin de la liste de formulaires (ajouté à l\'URL du serveur)</string>
    <string name="change_protocol">Protocole</string>
    <string name="change_submission_url">Chemin d\'enregistrement (ajouté à l\'URL du serveur)</string>
    <string name="formlist_url">Chemin de la liste de formulaires</string>
    <string name="submission_url">Chemin d\'enregistrement</string>
    <string name="font_size">Taille de la Police</string>
    <string name="change_font_size">Taille de la Police</string>
    <string name="lang_swahili">Swahili</string>
    <string name="lang_english">English</string>
    <string name="lang_french">French</string>
    <string name="lang_portuguese">Portuguese</string>
    <string name="lang_khmer">Khmer</string>
    <string name="lang_chinese">Chinese</string>
    <string name="lang_thai">Thai</string>
    <string name="lang_vietnamese">Vietnamese</string>
    <string name="btn_change_language">Change</string>
    <string name="lbl_choose_language">Choisissez une langue</string>
    <string name="nav_item_home">Accueil</string>
    <string name="nav_item_about">À propos d\'AfyaData</string>
    <string name="nav_item_symptoms">Symptômes</string>
    <string name="nav_item_search">Chercher</string>
    <string name="nav_item_settings">Paramètres</string>
    <string name="nav_item_logout">Déconnexion</string>
    <string name="lbl_case_attended">Cas pris en charge</string>
    <string name="lbl_detected_disease">Maladie détectée</string>
    <string name="lbl_other_disease">Autre maladie (si applicable)</string>
    <string name="lbl_write_other_disease">Écrire une autre maladie</string>
    <string name="lbl_write_action_taken">Écrire les mesures prises</string>
    <string name="lbl_reported_emai">Rapporté par e-mail</string>
    <string name="lbl_submit">Soumettre</string>
    <string name="lbl_search_details">Recherche en utilisant le formulaire et la valeur</string>
    <string name="lbl_search">Chercher</string>
    <string name="lbl_search_results">Résultats de la recherche</string>
    <string name="lbl_choose_form">Choisissez le formulaire</string>
    <string name="lbl_choose_field">Choisissez le champ de recherche</string>
    <string name="lbl_enter_value">Entrez la valeur de recherche</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
</resources>