<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_home_white_48dp"
            android:title="@string/nav_item_home" />

        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_lightbulb_outline_white_48dp"
            android:title="@string/nav_item_about" />

        <item
            android:id="@+id/action_symptoms"
            android:icon="@drawable/ic_note_add_white_48dp"
            android:title="@string/nav_item_symptoms" />

        <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search_white_48dp"
            android:title="@string/nav_item_search" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/nav_item_settings" />

        <item
            android:id="@+id/action_sign_out"
            android:icon="@drawable/ic_exit_to_app_white_48dp"
            android:title="@string/nav_item_logout" />
    </group>

</menu>