<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_choose_language"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/radio_swahili"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/lang_swahili"
                    android:textAppearance="@style/TextAppearance.FontPath"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_medium"/>

                <RadioButton
                    android:id="@+id/radio_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/lang_english"
                    android:textAppearance="@style/TextAppearance.FontPath"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_medium"/>

                <RadioButton
                    android:id="@+id/radio_french"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/lang_french"
                    android:textAppearance="@style/TextAppearance.FontPath"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_medium"/>

                <RadioButton
                    android:id="@+id/radio_portuguese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/lang_portuguese"
                    android:textAppearance="@style/TextAppearance.FontPath"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_medium"/>

                <RadioButton
                    android:id="@+id/radio_thai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/lang_thai"
                    android:textAppearance="@style/TextAppearance.FontPath"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_medium"/>

                <RadioButton
                    android:id="@+id/radio_vietnamese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/lang_vietnamese"
                    android:textAppearance="@style/TextAppearance.FontPath"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_medium"/>

                <RadioButton
                    android:id="@+id/radio_chinese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/lang_chinese"
                    android:textAppearance="@style/TextAppearance.FontPath"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_medium"/>

                <RadioButton
                    android:id="@+id/radio_khmer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/lang_khmer"
                    android:textAppearance="@style/TextAppearance.FontPath"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_medium"/>
            </RadioGroup>

            <Button
                android:id="@+id/btn_change"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/primary_dark_rounded_button"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:text="@string/btn_change_language"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>