<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/lbl_search_details"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:textSize="@dimen/text_large" />

        <!-- Form Spinner Dropdown -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/lbl_choose_form"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/text_large"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/form"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:popupBackground="@drawable/background_spinner"
            android:prompt="@string/lbl_choose_form"
            android:spinnerMode="dropdown"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_large" />

        <!-- Form Label Spinner Dropdown -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:text="@string/lbl_choose_field"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/text_large"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:popupBackground="@drawable/background_spinner"
            android:prompt="@string/lbl_choose_field"
            android:spinnerMode="dropdown"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_large" />

        <EditText
            android:id="@+id/value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/lbl_enter_value"
            android:maxLines="1"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:textSize="@dimen/text_large" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/primary_rounded_button"
            android:padding="10dp"
            android:text="@string/lbl_search"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/search_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_search"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/lbl_search_results"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.FontPath"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        android:visibility="gone" />

    <ListView
        android:id="@+id/list_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_info"
        android:layout_marginTop="5dp"
        android:divider="@color/light_blue_grey"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/list_row_selector" />

</RelativeLayout>